# Automotive-Radar-Data-Communication-and-Simulation-Using-ROS

./: Hurdles.md  Hurdles_faced.md  PROCESS.md  README.md  Visioners_ROS.md  pc1.cpp  pc1_server.cpp  pc2.cpp  pc2_client.cpp
hackathon/: CMakeLists.txt  package.xml
hackathon/Radar_Dataset/: 000000.csv  000001.csv  000002.csv  000003.csv  000004.csv  000005.csv  000006.csv  000007.csv  000008.csv  000009.csv  000010.csv  000011.csv  000012.csv  000013.csv  000014.csv  000015.csv  000016.csv  000017.csv  000018.csv  000019.csv  000020.csv  000021.csv  000022.csv  000023.csv  000024.csv  000025.csv  000026.csv  000027.csv  000028.csv  000029.csv  000030.csv  000031.csv  000032.csv  000033.csv  000034.csv  000035.csv  000036.csv  000037.csv  000038.csv  000039.csv  (+506 more)
hackathon/include/hackathon/: coordinate_conversion.h
hackathon/launch/: ROS_hackathon.launch  hackathon_application.launch  hackathon_dataset.launch  hackathon_extension.launch  hackathon_pubsub.launch  hackathon_serverclient.launch
hackathon/msg/: location.msg  radar_data.msg
hackathon/rviz/: lidar.rviz  radar.rviz  radar_gazebo.rviz
hackathon/src/: coordinate_conversion.cpp  pc1.cpp  pc1_application.cpp  pc1_dataset.cpp  pc1_extension.cpp  pc1_gazebo.cpp  pc1_server.cpp  pc1_square.cpp  pc2.cpp  pc2_application.cpp  pc2_client.cpp  pc2_dataset.cpp  pc2_extension.cpp  pc2_gazebo.cpp  spherical_coordinates.csv
hackathon/srv/: radar_data_srv.srv  recover.srv
velodyne_description/launch/: example.launch
velodyne_description/rviz/: radar.rviz
velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
velodyne_description/world/: myworld.world
velodyne_gazebo_plugins/: CMakeLists.txt
velodyne_gazebo_plugins/msg/: location.msg  radar_data_extension.msg
velodyne_gazebo_plugins/src/: PC2.cpp  SubscribePointCloud2Message.cpp
